--- a/css/theme-elements.css
+++ b/css/theme-elements.css
@@ -185,7 +185,7 @@ blockquote {
 
 /* Paragraphs */
 p {
-	color: #777777;
+	color: #231F20;
 	line-height: 24px;
 	margin: 0 0 20px;
 }
